5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1712_2504.log
== TEST (2019-05-14 09:06:33) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
   else:
	   j=a
   c=c+1
   z=z+1
   i=i+1
   y=y+2
   h=h+j
print(round((h*a), 8))

-- ERROR:
File "XXXX", line 13
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:06:53) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
   else:
	   j=a
   c=c+1
   z=z+1
   i=i+1
   y=y+2
   h=h+j
print(round((h*a), 8))

-- ERROR:
File "XXXX", line 13
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:07:05) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
   c=c+1
   z=z+1
   i=i+1
   y=y+2
   h=h+j
print(round((h*a), 8))

-- ERROR:
File "XXXX", line 15
    c=c+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:07:14) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
   z=z+1
   i=i+1
   y=y+2
   h=h+j
print(round((h*a), 8))

-- ERROR:
File "XXXX", line 16
    z=z+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:07:22) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
   i=i+1
   y=y+2
   h=h+j
print(round((h*a), 8))

-- ERROR:
File "XXXX", line 17
    i=i+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:07:28) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
   y=y+2
   h=h+j
print(round((h*a), 8))

-- ERROR:
File "XXXX", line 18
    y=y+2
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:07:39) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
   h=h+j
print(round((h*a), 8))

-- ERROR:
File "XXXX", line 19
    h=h+j
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:07:45) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 09:07:59) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- EXECUTION TIME:
0.142552
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:08:01) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:08:15) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 09:08:22) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- EXECUTION TIME:
0.173701
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:08:23) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y/(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:09:07) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:09:31) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:13:47) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 09:13:51) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v=((1/(y/(3**(z)))))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 09:30:01) 
-- CODE:
k=int(input("repeticoes"))
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**(z)))))
		j=w*v
	else:
	   j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a), 8))

-- EXECUTION TIME:
401.872
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:44:49) 
-- CODE:
q1=int(input("quant inicial de copias no sangue: "))
q2=int(input("quant inicial de leucocitos no sangue: "))
p1=int(input("mult do virus: "))
p2=int(input("'mult dos leucocitos: "))
x=q1
y=q2
t=0
while((2*x) > y) and (p1<p2) and (q1>q2):
	t=t+1
	x=x + (x*(p1/100))
	y=y + (y*(p2/100))
print(t)
-- EXECUTION TIME:
0.128447
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
